# cpp-cmake-multitarget-os

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
src/: main.cpp
